[gd_scene load_steps=6 format=3 uid="uid://dop7a1x171n8n"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_35jo5"]
[ext_resource type="PackedScene" uid="uid://ny8ydacopoki" path="res://scenes/player.tscn" id="1_muplf"]
[ext_resource type="Script" path="res://scripts/pipe_spawner.gd" id="3_ryi6w"]
[ext_resource type="PackedScene" uid="uid://cfhf44juqq2r4" path="res://scenes/cloud_particles.tscn" id="4_8wlj7"]

[sub_resource type="FontVariation" id="FontVariation_ut4y8"]
variation_embolden = 0.6

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_35jo5")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_muplf")]
z_index = 10

[node name="PipeSpawner" type="Node2D" parent="."]
position = Vector2(768, 0)
script = ExtResource("3_ryi6w")

[node name="Timer" type="Timer" parent="PipeSpawner"]
wait_time = 2.5
autostart = true

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="FailScreen" type="Control" parent="UICanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UICanvas/FailScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.74902)

[node name="Content" type="Control" parent="UICanvas/FailScreen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UICanvas/FailScreen/Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.5
offset_right = 124.5
offset_bottom = 67.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontVariation_ut4y8")
theme_override_font_sizes/font_size = 48
text = "You failed."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="UICanvas/FailScreen/Content"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_right = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayAgainButton" type="Button" parent="UICanvas/FailScreen/Content/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 128.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="MenuButton" type="Button" parent="UICanvas/FailScreen/Content/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -42.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Menu"

[node name="ScoreLabel" type="Label" parent="UICanvas"]
offset_left = 16.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 24
text = "Score: X"

[node name="HighScoreLabel" type="Label" parent="UICanvas"]
offset_left = 16.0
offset_top = 40.0
offset_right = 108.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 24
text = "High Score: X"

[node name="ParticleCanvas" type="CanvasLayer" parent="."]
layer = -1

[node name="ParticleControl" type="Control" parent="ParticleCanvas"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="CloudParticles" parent="ParticleCanvas/ParticleControl" instance=ExtResource("4_8wlj7")]
z_index = 0

[connection signal="timeout" from="PipeSpawner/Timer" to="PipeSpawner" method="_on_timer_timeout"]
[connection signal="pressed" from="UICanvas/FailScreen/Content/Control/PlayAgainButton" to="GameManager" method="_on_play_again_button_pressed"]
[connection signal="pressed" from="UICanvas/FailScreen/Content/Control/MenuButton" to="GameManager" method="_on_menu_button_pressed"]
